Process on exploit webpage body complete

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "csv-parse": "^4.12.0",
     "esm": "^3.2.25",
     "html-to-text": "^5.1.1",
+    "jsdom": "^16.4.0",
     "rxjs": "^6.6.3",
     "wordpos": "^2.0.0"
   }
